syntax = "proto3";
package modular_gm_game_rollup.modulargmgamerollup;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "modular_gm_game_rollup/x/modulargmgamerollup/types";

// Msg defines the Msg service.
service Msg {
      rpc CreateModularFellow(MsgCreateModularFellow) returns (MsgCreateModularFellowResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateModularFellow {
  string creator = 1;
  string score = 2;
  string x = 3;
  string y = 4;
}

message MsgCreateModularFellowResponse {
  uint64 id = 1;
}

// this line is used by starport scaffolding # proto/tx/message
